style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

.wrapper {
    width: 100%;
    height: 100vh;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    background-color: azure;
    background-image: url(./assets/img/cover1.png);
    background-blend-mode:luminosity;
    font-family: 'Lucida Sans', sans-serif;
    font-size: 18px;
    font-weight: 700;
}

header, footer {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-between;
    width: 100%;
    padding: 2.5% 10%;
    opacity: 0.5;
    height: 10vh;
    background: rgb(34,193,195);
    background: linear-gradient(0deg, rgba(34,193,195,1) 0%, rgba(253,187,45,1) 100%);    font-size: 18px;
    border: 2px solid black;
}

header:hover, footer:hover {
    transition: 0.7s;
    opacity: 0.9;
}

h1 {
    font-size: 24px;
}

/* Main */

/* Player */

.player {
    position: relative;
    padding: 0 20px;
    width: 360px;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    background: rgb(63,94,251);
    background: linear-gradient(90deg, rgba(63,94,251,1) 0%, rgba(252,70,107,0.75) 100%);        
    border-radius: 50%;
}

.song {
    padding: 5% 10% 10% 10%;
    font-size: 20px;
    text-align: center;
}

.progress__container {
    background-color: beige;
    border-radius: 5px;
    width: 250px;
    height: 10px;
    margin: 10px 0;
    display: flex;
    align-items: center;
    position: relative;
    cursor: pointer;
}

.progress {
    margin: 2px;
    background:blueviolet;
    height: 6px;
    border-radius: 5px;
    /* width: 150px; */
}

.cover {
    margin-top: 5%;
}

.cover > img {
    width: 150px;
    border-radius: 50%;
}

.buttons {
    padding: 0 10%;
    display: flex;
    flex-direction: row;
    gap: 25px;
    justify-content: space-between;
    align-items: center;
}

.btn {
    position: absolute;
}

.btn > img {
    width: 45px;
    cursor: pointer;
}

.btn > img:hover {
    filter: invert(150%) sepia(11%) saturate(874%) hue-rotate(7deg) brightness(95%) contrast(87%);
}

.play > .active {
    filter: invert(70%) sepia(11%) saturate(874%) hue-rotate(7deg) brightness(95%) contrast(87%);
    transition: .5s;
    cursor: pointer;
}

/* Buttons */

.prev {
    bottom: 65%;
    left: 10%;
}

.next {
    bottom: 65%;
    right: 10%;
}

.play {
    position: sticky;
}

/* Time */

.time {
    width: 70%;
    display: flex;
    justify-content:space-between;
    flex-direction: row;
}

/* Footer */
 
footer > a {
    text-decoration: none;
    color: black;
}

footer > a:hover {
    color: #bdae82;
    transition: 0.5s;
}

.rsschool {
    width: 100px;
}

.rsschool:hover {
    filter: invert(73%) sepia(11%) saturate(874%) hue-rotate(7deg) brightness(95%) contrast(87%);
    transition: 0.7s;
}

/* Range */

input[type=range]  {
    width: 200px;
    -webkit-appearance: none;
    -moz-appearance: none;
    appearance: none;
    outline: none;
    overflow: hidden;
    height: 7px;
  }

  input[type=range]::-webkit-slider-runnable-track {
    height: 7px;
    background-color: blue;
  }

  input[type=range]::-webkit-slider-thumb {
    background: black;
    cursor: pointer;
    width:3px;
    height: 15px;
    -webkit-appearance: none;
    margin-top: -4px;
    box-shadow: -200px  0 0 200px  #bdae82;

  }

  input[type=range]::-moz-range-track {
      height: 7px;
      background-color: blue;
  }


 input[type=range]::-moz-range-thumb {
    background: #ecf0f1;
    cursor: pointer;
    height: 7px;
    border-radius:0px;
    box-shadow: -200px  0px 0px 200px   #;
    padding: 0px;
    margin: 0px;
  }

